# anki-vocab-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260228_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: anki.py  cards.py  deps.py  schemas.py  stats.py  telegram_webapp_auth.py  telegram_webhook.py  vocab.py
backend/app/bot/: formatter.py  handler.py  input_validation.py  rate_limiter.py  runtime.py
backend/app/clients/: anki_connect.py  backend_sync_api.py  openrouter.py  telegram.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  anki_sync_attempt.py  card.py
backend/app/schemas/: description_lookup.py  llm.py
backend/app/scripts/: __init__.py  run_telegram_bot.py  sync_anki.py
backend/app/services/: anki_sync.py  card_service.py  description_lookup_prompt.py  llm_prompt.py  pronunciation.py
backend/tests/: telegram_webapp_test_helpers.py  test_anki_connect_client.py  test_anki_sync_service.py  test_api.py  test_app.py  test_backend_sync_api_client.py  test_bot_formatter.py  test_bot_handler.py  test_bot_input_validation.py  test_bot_rate_limiter.py  test_bot_runtime.py  test_card_service.py  test_config.py  test_description_lookup_prompt.py  test_description_lookup_schema.py  test_llm_prompt.py  test_llm_schemas.py  test_models.py  test_openrouter_client.py  test_sync_anki_script.py  test_telegram_webapp_auth.py  test_telegram_webhook.py
(+41 files in other folders)
