[project]
name = "anki-vocab-bot-backend"
version = "0.1.0"
description = "Backend services for the anki-vocab-bot monorepo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18,<4.0",
    "alembic>=1.14,<2.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.9,<1.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
